--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ torchvision = "*"
 [tool.poetry.dev-dependencies]
 pylint = "^2.3"
 black = {version = "^18.3-alpha.0", allows-prereleases = true}
+pre-commit = "^1.15"
+bumpversion = "^0.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
